src/app/layout/navi/navi.scss
@use 'styles/variables' as *;
@use 'styles/mixins' as *;

#sideNav {
  background: $blue-dark;
  z-index: 1050;
  width: 100%;
  height: auto;
  position: fixed;
  bottom: 0;
  min-height: 5rem;
  gap: 7rem;

  @include for-size(lg) {
    position: relative;
    width: 14.5rem;
    height: 100vh;
    padding: 4rem 0;
  }
}

#main-nav {
  max-height: 4.75rem;
  justify-content: center;

  @include for-size(lg) {
    max-height: 100%;
    margin-bottom: auto;
  }

  img.active {
    display: none;
  }

  img.default {
    display: flex;
  }

  li {
    max-width: 6.5rem;
    flex: 1;
    border-radius: $navi-border-radius;

    &.active {
      background: $blue-darker;
      border-radius: $navi-border-radius;

      @include for-size(lg) {
        border-radius: 0;
      }

      a {
        color: $white;

        img.active {
          display: flex;
        }

        img.default {
          display: none;
        }
      }
    }

    @include for-size(lg) {
      max-width: 100%;
    }
  }

  .navigation {
    gap: min(0.25em);

    @include for-size(sm) {
      gap: min(1.5em);
    }
  }

  a {
    color: $grey-light2;
    transition: $trans-default;
    text-decoration: none;
    padding: $space-sm 0.5rem;
    text-align: center;
    line-height: 1.2;
    gap: 0.25rem;
    font-size: 0.8rem;

    &:hover {
      color: $white;

      @include for-size(lg) {
        border-radius: 0;
        background: $blue-dark-hover;
      }
    }

    @include for-size(sm) {
      font-size: 1rem;
      padding: $space-sm 1rem;
    }

    @include for-size(lg) {
      padding: $space-sm 2.75rem;
    }
  }
}


#footer-nav {
  justify-content: flex-end;

  li {
    padding: $space-sm 0;
  }

  a {
    color: $grey;
    transition: $trans-default;
    text-decoration: none;
    padding-left: 2.75rem;
  }

  li.active {
    background: $blue-darker;

    a {
      color: $white;
    }
  }
}

